# pre-commit-check-inline-styles

./: .pre-commit-hooks.yaml  README.md  check_inline_styles.py  setup.cfg  setup.py
check_inline_styles/: check_inline_styles.py
