# setup.cfg
[metadata]
name = check-inline-style-hook
description = Check inline style in HTML files
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.0
author = Architrixs
license = MIT

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-inline-style = check_inline_styles:main