[metadata]
name = check-inline-style-hook
description = Check inline style in HTML files
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.1.0
author = Architrixs
license = MIT
url = https://github.com/Architrixs/pre-commit-check-inline-styles

[options]
packages = find:
python_requires = >=3.6
install_requires =
    termcolor

[options.entry_points]
console_scripts =
    check-inline-styles=check_inline_styles.check_inline_styles:main